crates/nargo_cli/tests/compile_failure/depend_on_bin/src/main.nr
use dep::std;
use dep::bin_dep;

fn main(x : Field) {
    std::assert_eq(x, 1);
}
